@@ -1,6 +1,6 @@
 SPRING FRAMEWORK CHANGELOG
 ==========================
-$Id: changelog.txt,v 1.121 2004-04-02 01:47:27 trisberg Exp $
+$Id: changelog.txt,v 1.122 2004-04-03 11:51:20 aarendsen Exp $
 
 
 Changes in version 1.0.1 (7.4.2003)
@@ -49,6 +49,7 @@ Package org.springframework.validation
 * DefaultMessageCodesResolver generates codes for specific elements and the whole collection in case of array/List/Map
 * DefaultMessageCodesResolver generates code for the type of a field, e.g. "typeMismatch.java.lang.String"
 * DefaultMessageCodesResolver generates code for the object name in case of an ObjectError, e.g. "myError.myForm"
+* fixed bug where DataBinder would choke on null values of required fields, resulting in an NPE
 
 Package org.springframework.web
 * added MaxUploadSizeExceededException to multipart package, as a specific subclass of MultipartException
